# gammaray_issue_1061

./: CMakeLists.txt  test.cpp
qml/: Main.qml
qml/JS/: ColorUtils.js  qmldir
